Fix vertical alignment of profile name

--- a/dailyscape.css
+++ b/dailyscape.css
@@ -44,6 +44,7 @@ body {
 #profile-name {
     font-size: 1rem;
     font-weight: normal;
+    vertical-align: top;
     margin-right: 5px;
 }
 
